fix(global) spacing variables

--- a/public/assets/Css/components.css
+++ b/public/assets/Css/components.css
@@ -5,10 +5,12 @@
     display: flex;
     flex-direction: column;
     position: relative;
-    padding: var(--card-padding-h-xl);
+    padding: var(--space-2) var(--space-6);
     background: url(../images/banners/armsBanner.png);
     background-repeat: no-repeat;
     background-size: cover;
+    border-radius: var(--border-radius-l);
+    border-radius: var(--border-radius-s)
 }
 
 .card-link {
@@ -21,6 +23,7 @@
     font-weight: var(--font-weight-l);
     text-transform: uppercase;
     letter-spacing: var(--letter-spacing-h);
+    margin: var(--space-6) 0 var(--space-2) 0;
 }
 
 .banner-card:before {
@@ -29,6 +32,7 @@
     background: rgba(0, 0, 0, .8);
     inset: 0;
     z-index: 1;
+    border-radius: var(--border-radius-l);
 }
 
 .banner-card > * {
@@ -40,13 +44,16 @@
     top: -25px;
     left: -15px;
     background-color: var(--primary-color);
-    padding: 5px 22px;
+    padding: var(--space-2) var(--space-5);
+    border-radius: var(--border-radius-s);
+    font-weight: var(--font-weight-m);
+    text-transform: uppercase;   
 }
 
 .card-menu-wrapper {
     position: absolute;
-    top: 10px;
-    right: 10px;
+    top: 20px;
+    right: 20px;
     z-index: 3;
 }
 
@@ -62,8 +69,9 @@
     top: 25px;
     background: var(--card-bg);
     flex-direction: column;
-    gap: 1.05rem;
-    padding: var(--card-padding-m);
+    gap: var(--space-4);
+    padding: var(--space-4) var(--space-4);
+    border-radius: var(--border-radius-s);
 }
 
 
@@ -78,15 +86,10 @@
     cursor: pointer;
     font-size: var(--font-size-p-s);
     font-weight: var(--font-weight-light);
-    gap: .8rem;
+    gap: var(--space-3);
     white-space: nowrap;
 }
 
-.card-menu-item span {
-    display: flex;
-    align-items: center;
-    gap: .5rem;
-}
 
 
 .menu-divider {
@@ -100,13 +103,13 @@
     display: flex;
     flex-direction: column;
     list-style: none;
-    gap: 1rem;
+    gap: var(--space-1);
 }
 
 .banner-card ul li {
     display: flex;
     align-items: center;
-    gap: 1rem;
+    gap: var(--space-3);
     line-height: 2rem;
 }
 
@@ -131,8 +134,8 @@
 	background-repeat: no-repeat;
 	background-position: right center;
 	background-size: contain;
-	gap: var(--spacing-l);
-	padding: var(--card-padding-m);
+	gap: var(--space-5);
+	padding: var(--space-3) var(--space-5);
 }
 
 .icon-card h2 {
@@ -146,13 +149,13 @@
 .exercise-details {
 	display: flex;
 	flex-direction: column;
-	gap: var(--spacing-s)
+	gap: var(--space-2)
 }
 
 .icon-card img {
 	width: 55px;
 	border-right: 1px solid var(--primary-color);
-	padding-right: var(--spacing-m);
+	padding-right: var(--space-4);
 }
 
 .icon-card ul{
@@ -163,7 +166,7 @@
 	font-weight: var(--font-weight-s);
 	display: flex;
 	align-items: center;
-	gap: var(--spacing-m);
+	gap: var(--space-3);
 }
 
 .icon-card ul li span{
